# ckanext-harvest-basket

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.ini
.github/workflows/: test.yml
ckanext/harvest_basket/: plugin.py  utils.py
ckanext/harvest_basket/action/auth/: __init__.py  get.py
ckanext/harvest_basket/action/logic/: __init__.py  get.py
ckanext/harvest_basket/assets/: script.js  webassets.yml
ckanext/harvest_basket/assets/css/: harvest_basket.css
ckanext/harvest_basket/assets/js/: harvest_basket.js
ckanext/harvest_basket/harvesters/: __init__.py  arcgis_harvester.py  base_harvester.py  ckan_harvester.py  csiro.py  csw.py  dcat.py  dkan_harvester.py  junar_harvester.py  ods_harvester.py  socrata_harvester.py
ckanext/harvest_basket/templates/: base.html
ckanext/harvest_basket/templates/source/: new_source_form.html
ckanext/harvest_basket/tests/: test_plugin.py
